kubernetes/clusters/kenobi/monitoring/ingressroute.yaml
#
# Grafana
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: grafana
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.feldman.in`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-feldman-in-tls
---
#
# InfluxDB
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: influxdb
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`influxdb.feldman.in`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
  tls:
    secretName: influxdb-feldman-in-tls
---
#
# Prometheus
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: prometheus-prometheus
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.feldman.in`)
      kind: Rule
      services:
        - name: kube-prometheus-prometheus
          port: 9090
  tls:
    secretName: prometheus-feldman-in-tls
